--- a/Boostrap/style/main.css
+++ b/Boostrap/style/main.css
@@ -41,10 +41,16 @@ html * {
   text-decoration: none;
 }
 
+.btn-default {
+  width: 100%;
+  background-color: #F4893C;
+  border-radius: 20px;
+  color: #fff;
+}
+
 .main-container {
   width: 100%;
   height: calc(100vh - 60px);
-  background-color: yellow;
   justify-content: center;
   align-items: center;
 }
@@ -52,8 +58,8 @@ html * {
   height: 90%;
   min-height: 600px;
   width: 80%;
-  background-color: lightgray;
   border-radius: 10px;
+  border: 1px solid #D7D7D7;
   display: flex;
   justify-content: space-between;
 }
@@ -61,7 +67,45 @@ html * {
 .card-right {
   width: 100%;
   height: 100%;
-  background-color: blue;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: inherit;
+}
+
+.log-form {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  padding: 40px 30px;
+}
+.log-form__header {
+  width: 100%;
+  height: auto;
+}
+.log-form__body--text {
+  font-size: 12px;
+  font-weight: lighter;
+}
+.log-form__body--link {
+  color: #000;
+  font-size: 13px;
+}
+.log-form__title {
+  font-size: 2rem;
+  text-align: center;
+  text-transform: uppercase;
+}
+.log-form__subtitle {
+  font-size: 1rem;
+  text-align: center;
+}
+
+.input-group-text {
+  background-color: transparent;
 }
 
 .card-left {
