--- a/Boostrap/style/main.scss
+++ b/Boostrap/style/main.scss
@@ -48,18 +48,25 @@ html {
 }
 
 // ..........main box.........
+
+.btn-default{
+    width: 100%;
+    background-color: #F4893C;
+    border-radius: 20px;
+    color: #fff;
+}
 .main-container{
     width: 100%;
     height: calc(100vh - 60px);
-    background-color: yellow;
     justify-content: center;
     align-items: center;
     &__card{
         height: 90%;
         min-height: 600px;
         width: 80%;
-        background-color: lightgray;
+        //background-color: lightgray;
         border-radius: 10px;
+        border: 1px solid $header-border-bottom-color;
         display: flex;
         justify-content: space-between;
     }
@@ -67,7 +74,49 @@ html {
 .card-right{
     width: 100%;
     height: 100%;
-    background-color: blue;
+    display: flex;
+    align-items: center;
+    justify-content:center;
+    border-radius: inherit;
+}
+.log-form{
+    //background-color: blue;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    padding: 40px 30px;
+    &__header{
+        width: 100%;
+        height: auto;
+        //background-color: yellow;
+
+    }
+    &__body{
+            &--text{
+                font-size: 12px;
+                font-weight: lighter;
+                
+            }
+            &--link{
+                color: #000;
+                font-size: 13px;
+            }
+    }
+    &__title{
+        font-size: 2rem;
+        text-align: center;
+        text-transform: uppercase;
+    }
+    &__subtitle{
+        font-size: 1rem;
+        text-align: center;
+    }
+}
+.input-group-text{
+    background-color: transparent;
 }
 .card-left{
     display: none;
